docs/v0.22/modules/en/pages/overview/features.adoc
= Features
:sidebar_position: 0

This section describes features and feature stages in {product_name}.

== List of Features

|===
| Feature | Helm Feature Name | Sub-Feature | Default | Stage 

| *Add-on Provider Fleet*
| `addon-provider-fleet`
| _None_
| enabled
| beta

| *Agent TLS Mode*
| `agent-tls-mode`
| _None_
| enabled
| beta
|===

=== Add-on Provider for Fleet
This feature installs Cluster API Add-on Provider for Fleet (CAAPF) to provide integration with link:https://github.com/rancher/fleet[Fleet] and enable the easy deployment of applications to CAPI provisioned clusters. CAAPF automatically installs Fleet in the management cluster and registers newly provisioned CAPI clusters with Fleet, so that applications can be deployed to these clusters via GitOps, `Bundle` or `HelmApp` resources. CAAPF also includes support for grouping CAPI clusters that reference the same ClusterClass through Fleet's ClusterGroup, essentially simplifying application deployments to large groups of clusters. This feature is in GA stage and enabled by default.

=== Agent TLS Mode
This feature gate is used to instruct Turtles on whether it should follow Rancher's `agent-tls-mode` setting, when retrieving cluster registration manifests for importing clusters. When enabled, Turtles will lookup the value of Rancher's `agent-tls-mode` setting to determine whether it has been set to `system-store` or `strict`. If set to `system-store`, Turtles will trust any certificate generated by a public Certificate Authority contained in the operating system's trust store, including those signed by authorities such as Let's Encrypt. If set to `strict`, Turtles will only trust certificates generated by the Certificate Authority contained in Rancher's `cacerts` setting. When this setting is disabled, Turtles will fallback to work in `system-store` mode. This feature is in beta stage and enabled by default.

== Feature Stages

{product_name} follows the Kubernetes link:https://kubernetes.io/docs/reference/command-line-tools-reference/feature-gates/#feature-stages[feature stages] process. A feature can be in one of the following stages: Alpha, Beta, or General Availability (GA).

=== Alpha Stage
- Disabled by default.
- May be buggy, with no long-term support.
- API may change without notice.
- Recommended only for short-lived testing clusters.

=== Beta Stage
- Always enabled by default.
- Well-tested and considered safe.
- Support is stable, but schema may change in future releases.
- Recommended for non-business-critical uses due to potential incompatible changes.

[NOTE]
====
Please provide feedback on Alpha and Beta features!
====

=== General Availability (GA) Stage
- Always enabled, cannot be disabled.
- No feature gate needed.
- Stable, with long-term support in future releases.
