docs/v0.25/modules/en/pages/overview/features.adoc
= Features
:sidebar_position: 0

This section describes features and feature stages in {product_name}.

== List of Features

|===
| Feature | Helm Feature Name | Sub-Feature | Default | Stage 

| *Add-on Provider Fleet*
| `addon-provider-fleet`
| _None_
| enabled
| beta

| *Agent TLS Mode*
| `agent-tls-mode`
| _None_
| enabled
| beta

| *No Cert Manager*
| `no-cert-manager`
| _None_
| disabled
| alpha
|===

=== Add-on Provider for Fleet
This feature installs Cluster API Add-on Provider for Fleet (CAAPF) to provide integration with link:https://github.com/rancher/fleet[Fleet] and enable the easy deployment of applications to CAPI provisioned clusters. CAAPF automatically installs Fleet in the management cluster and registers newly provisioned CAPI clusters with Fleet, so that applications can be deployed to these clusters via GitOps, `Bundle` or `HelmOp` resources. CAAPF also includes support for grouping CAPI clusters that reference the same ClusterClass through Fleet's ClusterGroup, essentially simplifying application deployments to large groups of clusters. This feature is in GA stage and enabled by default.

=== Agent TLS Mode
This feature gate is used to instruct Turtles on whether it should follow Rancher's `agent-tls-mode` setting, when retrieving cluster registration manifests for importing clusters. When enabled, Turtles will lookup the value of Rancher's `agent-tls-mode` setting to determine whether it has been set to `system-store` or `strict`. If set to `system-store`, Turtles will trust any certificate generated by a public Certificate Authority contained in the operating system's trust store, including those signed by authorities such as Let's Encrypt. If set to `strict`, Turtles will only trust certificates generated by the Certificate Authority contained in Rancher's `cacerts` setting. When this setting is disabled, Turtles will fallback to work in `system-store` mode. This feature is in beta stage and enabled by default.

=== No Cert Manager
This feature gate converts the CAPI Providers manifests to replace cert-manager usage with link:https://github.com/rancher/wrangler/[wrangler].  
In particular, the validating and mutating admission webhooks will be updated to use certificates generated by wrangler, instead of cert-manager, allowing for a cert-manager free environment.  
Beware that usage of the Rancher `CATTLE_SYNC_ONLY_CHANGED_OBJECTS` link:https://ranchermanager.docs.rancher.com/reference-guides/best-practices/rancher-server/tuning-and-best-practices-for-rancher-at-scale#reducing-event-handler-executions[functionality] may prevent certificates from renewing after the default expiration time of one year.  
It is possible to disable this feature to restore all provider manifests to the original cert-manager usage.  

Note: This feature is enabled by default when Turtles is installed by Rancher as a system chart.

== Feature Stages

{product_name} follows the Kubernetes link:https://kubernetes.io/docs/reference/command-line-tools-reference/feature-gates/#feature-stages[feature stages] process. A feature can be in one of the following stages: Alpha, Beta, or General Availability (GA).

=== Alpha Stage
- Disabled by default.
- May be buggy, with no long-term support.
- API may change without notice.
- Recommended only for short-lived testing clusters.

=== Beta Stage
- Always enabled by default.
- Well-tested and considered safe.
- Support is stable, but schema may change in future releases.
- Recommended for non-business-critical uses due to potential incompatible changes.

[NOTE]
====
Please provide feedback on Alpha and Beta features!
====

=== General Availability (GA) Stage
- Always enabled, cannot be disabled.
- No feature gate needed.
- Stable, with long-term support in future releases.
